refactor: PrizeInformation 에서 생성자를 private 으로 바꾸며 발생한 에러 해결